--- a/src/Pages/CSS/CarTemplate.css
+++ b/src/Pages/CSS/CarTemplate.css
@@ -1,7 +1,6 @@
 .car-template {
     display: flex;
     flex-direction: column;
-    /* Additional styles if needed */
     margin: 30px;
 
     h1 {
@@ -16,8 +15,6 @@
 
 .car-information {
     display: flex;
-
-    /* Additional styles if needed */
 
     img {
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -34,7 +31,7 @@
 }
 
 .large-image {
-    width: 600px; /* Adjust to fit the width of the container */
+    width: 600px;
     height: auto;
 }
 
@@ -47,7 +44,7 @@
 }
 
 .small-images img {
-    width: 140px; /* Adjust size as needed */
+    width: 140px;
     height: 100px;
 }
 
@@ -56,7 +53,6 @@
     flex: 1;
     align-items: center;
     justify-content: center;
-    /* Your existing styles */
 }
 
 table {
@@ -81,11 +77,11 @@ table tr {
 }
 
 table tr:nth-child(odd) {
-    background-color: #f9f9f9; /* Light background color for odd rows */
+    background-color: #f9f9f9;
 }
 
 table tr:nth-child(even) {
-    background-color: #ffffff; /* White background color for even rows */
+    background-color: #ffffff;
 }
 
 .contact-seller {
@@ -160,21 +156,20 @@ table tr:nth-child(even) {
     }
 
 }
-/* Full-screen modal */
+
 .modal {
     display: flex;
-    align-items: center; /* Vertically center */
-    justify-content: center; /* Horizontally center */
+    align-items: center;
+    justify-content: center;
     position: fixed;
     z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.9); /* Black background with opacity */
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
-/* Close button */
 .close {
     position: absolute;
     top: 15px;
@@ -185,14 +180,12 @@ table tr:nth-child(even) {
     cursor: pointer;
 }
 
-/* Full-screen image */
 .modal-content {
     max-width: 90%;
     max-height: 90%;
     margin: auto;
 }
 
-/* Zoom in on hover */
 .modal-content:hover {
     transform: scale(1.05);
     transition: transform 0.3s;
