--- a/src/Pages/CSS/LocationTemplate.css
+++ b/src/Pages/CSS/LocationTemplate.css
@@ -42,7 +42,7 @@
     border-radius: 15px;
 
     h1 {
-        color: #a30c0a;
+        color: #c80c09;
         font-size: 50px;
         text-transform: uppercase;
         font-weight: 600;
