--- a/src/Components/CategoryBar/CategoryBar.css
+++ b/src/Components/CategoryBar/CategoryBar.css
@@ -20,14 +20,14 @@
 .categories h1{
     text-align: center;
     font-size: 18px;
-    color: #D3D3D3;
+    color: #ffffff;
 }
 
 .categories ul{
     list-style: none;
 
     li{
-        color: #D3D3D3;
+        color: #ffffff;
         margin-bottom: 10px;
         cursor: pointer;
         margin-right: 30px;
