--- a/src/Pages/CSS/CarTemplate.css
+++ b/src/Pages/CSS/CarTemplate.css
@@ -1,7 +1,7 @@
 .car-template {
     display: flex;
     flex-direction: column;
-    margin: 30px;
+    margin: 0 30px;
 
     h1 {
         background: #8e1311;
